Post editor toolbar fixed on mobile view
Fixed the layout of the toolbar in the Post Editor to look better with the mobile version of the application.

--- a/frontend/src/app/component/user/user.component.css
+++ b/frontend/src/app/component/user/user.component.css
@@ -1512,6 +1512,17 @@ progress {
   .header-top-info {
     font-size: 0.9rem !important;
   }
+
+  .card-link .card-community-name-container{
+    padding-left: 0.55rem !important;
+    padding-right: 0.55rem !important;
+    padding-top: 0.3rem !important;
+    padding-bottom: 0.3rem !important;
+  }
+
+  .card-link .card-community-name-container p {
+    font-size: 0.8rem !important;
+  }
 }
 
 @media (min-width: 1200px) {
